--- a/sass/style.scss
+++ b/sass/style.scss
@@ -54,6 +54,7 @@ body {
 
 .posts {
   flex: 2 0 0;
+  position: relative;
 }
 
 .sidebar, .posts {
@@ -102,9 +103,13 @@ body {
 /* Post */
 
 .post {
-  display: none;
+  opacity: 0;
+  transition: 0.3s;
+  position: absolute;
+  width: 80%;
   &.active {
-    display: block;
+    opacity: 1;
+    z-index: 1;
   }
 }
 
