--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@ $font-text: 'Source Sans Pro', sans-serif;
 
 *, *::before, *::after {
   box-sizing: border-box;
+  scroll-behavior: smooth
 }
 
 body {
@@ -150,5 +151,138 @@ body {
   display: flex;
   p {
     margin: 0 10px 0 0;
+  }
+}
+
+
+@media (max-width:436px){
+  .wrapper {
+    flex-direction: column;
+    min-width: 350px;
+  }
+  .posts {
+    min-height: 400px;
+  }
+
+  .sidebar {
+    text-align: center;
+    background-color: #ddd;
+    padding: 0;
+    margin: 0 auto;
+    flex: 1 0 0;
+    width: 80%;
+    li{
+      padding: 0;
+      a {
+        padding: 5px 0;
+      }
+      &:hover {
+        background-color: #fff;
+        font-weight: bold;
+      }
+    }
+  }
+  a.active {
+    background-color: #fff;
+  }
+  .sidebar, .posts {
+    margin-bottom: 25px;
+  }
+  .class-li:hover::after {
+  width: 0;
+  }
+  .class-li:nth-of-type(n + 10):hover::after {
+    width: 0;
+  }
+  .class-li:last-child {
+    margin-bottom: 5px;
+  }
+}
+
+@media (min-width:436px) and (max-width: 680px ) {
+  .wrapper {
+    flex-direction: column;
+    min-width: 350px;
+  }
+  .posts {
+    min-height: 400px;
+  }
+
+  .sidebar {
+    text-align: center;
+    background-color: #ddd;
+    padding: 0;
+    margin: 0 auto;
+    flex: 1 0 0;
+    width: 65%;
+    li{
+      padding: 0;
+      a {
+        padding: 5px 0;
+      }
+      &:hover {
+        background-color: #fff;
+        font-weight: bold;
+      }
+    }
+  }
+  a.active {
+    background-color: #fff;
+  }
+  .sidebar, .posts {
+    margin-bottom: 25px;
+  }
+   .class-li:hover::after {
+  width: 0;
+  }
+  .class-li:nth-of-type(n + 10):hover::after {
+    width: 0;
+  }
+  .class-li:last-child {
+    margin-bottom: 5px;
+  }
+}
+
+@media (min-width:680px) and (max-width: 1000px ) {
+  .wrapper {
+    flex-direction: column;
+    min-width: 350px;
+  }
+  .posts {
+    min-height: 400px;
+  }
+
+  .sidebar {
+    text-align: center;
+    background-color: #ddd;
+    padding: 0;
+    margin: 0 auto;
+    flex: 1 0 0;
+    width: 50%;
+    li{
+      padding: 0;
+      a {
+        padding: 5px 0;
+      }
+      &:hover {
+        background-color: #fff;
+        font-weight: bold;
+      }
+    }
+  }
+  a.active {
+    background-color: #fff;
+  }
+  .sidebar, .posts {
+    margin-bottom: 25px;
+  }
+   .class-li:hover::after {
+  width: 0;
+  }
+  .class-li:nth-of-type(n + 10):hover::after {
+    width: 0;
+  }
+  .class-li:last-child {
+    margin-bottom: 5px;
   }
 }
