Add function calculateTags

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -76,6 +76,32 @@ body {
   }
 
 }
+/* Tags */
+
+.tags li {
+  display: inline;
+}
+
+.tag-size-1 {
+  font-size: 17px;
+}
+
+.tag-size-2 {
+  font-size: 19px;
+}
+
+.tag-size-3 {
+  font-size: 21px;
+}
+
+.tag-size-4 {
+  font-size: 23px;
+}
+
+.tag-size-5 {
+  font-size: 25px;
+}
+
 
 /* Layout */
 
